quality: expand 10 articles + create 2 new (wave 38)
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>